--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
       working_directory:
         description: "Path to Terraform working directory"
         required: true
-        default: "rg/"
+        default: "./rg"
 permissions:
   id-token: write
   contents: read
