--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5.0.0
    
-       Terraform Init
+       #Terraform Init
       - name: Terraform Init
         id: init
         run: terraform init
