--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
       # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v5.0.0
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.0 # Aap apni pasand ka version likh sakte hain
    
        #Terraform Init
       - name: Terraform Init
