--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,78 +1,84 @@
-name: "infra pipeline"
- 
 on:
-  push:
-    branches: [ "main", "feature/**" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
     inputs:
       working_directory:
-        description: "Path to Terraform"
+        description: "Path to Terraform working directory"
         required: true
-        default: "/rg/"
- 
+        default: "rg"
 permissions:
   id-token: write
   contents: read
- 
 jobs:
-  terraform-plan:
-    name: Terraform Plan
+  terraform:
+    name: Terraform on Window Self-Host Runner
     runs-on: windows-latest
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      WORK_DIR: ${{ github.event.inputs.working_directory || 'rg' }}
- 
+      TF_IN_AUTOMATION: true
+      TF_INPUT: false
+      WORK_DIR: ${{ github.event.inputs.working_directory }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4 
-      - name: Terraform Init & Plan
-       shell: pwsh
-       run: |
-         if (-not (Test-Path "${{ env.WORK_DIR }}")) {
-           throw "WORK_DIR not found: ${{ env.WORK_DIR }}"
-         }
-         cd "${{ env.WORK_DIR }}"
-         terraform init -input=false
-         terraform plan -input=false -out=tfplan
-         
-      - name: Upload Plan Artifact
-        uses: actions/upload-artifact@v4
+      # Checkout code
+      - name: Checkout repository
+        uses: actions/checkout@v5.0.0
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          name: tfplan
-          path: ${{ env.WORK_DIR }}/tfplan
- 
-  terraform-apply:
-    name: Terraform Apply
-    needs: terraform-plan
-    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+          terraform_version: 1.5.0 # Aap apni pasand ka version likh sakte hain
+   
+       #Terraform Init
+      - name: Terraform Init
+        id: init
+        run: terraform init
+        working-directory: ${{ github.workspace }}${{ '/' }}${{ github.event.inputs.working_directory }}
+      # Terraform Validate
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
+        working-directory: ${{ env.WORK_DIR }}
+      # Terraform Plan
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan
+        working-directory: ${{ env.WORK_DIR }}
+
+  manual_validation:
+    name: Manual Validation (Environment Approval)
+    needs: terraform
     runs-on: windows-latest
     environment: dev
-    
+    steps:
+      - name: Awaiting Approval
+        run: echo "Waiting for environment approval to proceed to apply..."
+
+  apply:
+    name: Terraform Apply (Approved)
+    needs: manual_validation
+    runs-on:  windows-latest
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      WORK_DIR: ${{ github.event.inputs.working_directory || 'rg' }}
- 
+      TF_IN_AUTOMATION: true
+      TF_INPUT: false
+      WORK_DIR: ${{ github.event.inputs.working_directory }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
- 
-      - name: Download Plan Artifact
-        uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v5
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          name: tfplan
-          path: ${{ env.WORK_DIR }}
- 
-      - name: Terraform Init & Apply
-        shell: pwsh # 
-        run: |
-          cd ${{ env.WORK_DIR }}
-          terraform init
-          terraform apply -auto-approve tfplan
+          terraform_version: 1.5.0 # Aap apni pasand ka version likh sakte hai
+      - name: Terraform Init
+        id: init
+        run: terraform init
+        working-directory: ${{ github.workspace }}${{ '/' }}${{ github.event.inputs.working_directory }}
+        
+      - name: Terraform Apply
+        id: apply
+        working-directory: ${{ github.workspace }}${{ '/' }}${{ github.event.inputs.working_directory }}
+        run: terraform apply -auto-approve
