--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,25 +1,21 @@
-name: "infra pipeline"
-
+name: Terraform Workflow with Manual Gate
 on:
   workflow_dispatch:
     inputs:
       working_directory:
-        description: "Path to Terraform working directory (relative to repo root)"
+        description: "Path to Terraform working directory"
         required: true
         default: "rg"
-
+ 
 permissions:
   id-token: write
   contents: read
-
-env:
-  # Fallback so empty na ho
-  WORK_DIR: ${{ github.event.inputs.working_directory || 'rg' }}
-
+ 
 jobs:
   terraform:
-    name: Terraform on GitHub Windows runner
-    runs-on: windows-latest
+    name: Terraform on Window Self-Host Runner
+    runs-on: [self-hosted, Windows]
+ 
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -27,52 +23,54 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_IN_AUTOMATION: true
       TF_INPUT: false
-
+      WORK_DIR: ${{ github.event.inputs.working_directory }}
+ 
     steps:
+      #  Checkout code
       - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.7.5
-
-      - name: Verify working directory
-        shell: pwsh
+        uses: actions/checkout@v5.0.0
+ 
+      #  Install Terraform
+      #- name: Install Terraform
+       # uses: little-core-labs/install-terraform@v2.0.0
+ 
+      - name: verify working directory
         run: |
-          Write-Host "Repo root:"; Get-ChildItem -Force
-          Write-Host "WORK_DIR: '${{ env.WORK_DIR }}'"
+          Get-Childitem ${{ github.workspace }}
 
+ 
+      #  Terraform Init
       - name: Terraform Init
-        shell: pwsh
-        working-directory: ${{ env.WORK_DIR }}
-        run: terraform init -input=false -no-color
-
+        id: init
+        run: terraform init
+        working-directory: ${{ github.workspace }}${{ '/' }}${{ github.event.inputs.working_directory }}
+ 
+      #  Terraform Validate
       - name: Terraform Validate
-        shell: pwsh
+        id: validate
+        run: terraform validate
         working-directory: ${{ env.WORK_DIR }}
-        run: terraform validate -no-color
-
-      - name: Terraform Plan (save + print)
-        shell: pwsh
+ 
+      #  Terraform Plan
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan
         working-directory: ${{ env.WORK_DIR }}
-        run: |
-          terraform plan -input=false -no-color -out=tfplan
-          terraform show -no-color tfplan
-
+ 
   manual_validation:
     name: Manual Validation (Environment Approval)
     needs: terraform
-    runs-on: windows-latest
-    environment: dev
+    runs-on: ubuntu-latest
+    environment: Pass
     steps:
       - name: Awaiting Approval
         run: echo "Waiting for environment approval to proceed to apply..."
-
+ 
   apply:
     name: Terraform Apply (Approved)
     needs: manual_validation
-    runs-on: windows-latest
+    runs-on: [self-hosted, Windows]
+ 
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -80,22 +78,18 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_IN_AUTOMATION: true
       TF_INPUT: false
-
+      WORK_DIR: ${{ github.event.inputs.working_directory }}
+ 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.7.5
-
+        uses: actions/checkout@v5
+ 
       - name: Terraform Init
-        shell: pwsh
-        working-directory: ${{ env.WORK_DIR }}
-        run: terraform init -input=false -no-color
-
+        id: init
+        run: terraform init
+        working-directory: ${{ github.workspace }}${{ '/' }}${{ github.event.inputs.working_directory }}
+ 
       - name: Terraform Apply
-        shell: pwsh
-        working-directory: ${{ env.WORK_DIR }}
-        run: terraform apply -input=false -auto-approve
+        id: apply        
+        working-directory: ${{ github.workspace }}${{ '/' }}${{ github.event.inputs.working_directory }}
+        run: terraform apply -auto-approve
