--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   terraform:
     name: Terraform on Window Self-Host Runner
-    runs-on: [self-hosted, Windows]
+    runs-on: windows-latest
  
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
@@ -69,7 +69,7 @@ jobs:
   apply:
     name: Terraform Apply (Approved)
     needs: manual_validation
-    runs-on: [self-hosted, Windows]
+    runs-on: windows-latest
  
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
