--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -5,7 +5,7 @@ on:
       working_directory:
         description: "Path to Terraform working directory"
         required: true
-        default: "rg"
+        default: "./rg"
  
 permissions:
   id-token: write
