--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -29,6 +29,12 @@ jobs:
       #  Checkout code
       - name: Checkout repository
         uses: actions/checkout@v5.0.0
+    
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+         terraform_version: 1.6.6
+
  
       #  Install Terraform
       #- name: Install Terraform
@@ -83,6 +89,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+        
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+         terraform_version: 1.6.6
  
       - name: Terraform Init
         id: init
