--- a/.github/workflows/keyvault.yml
+++ b/.github/workflows/keyvault.yml
@@ -20,7 +20,7 @@ permissions:
 jobs:
   terraform_plan:
     name: "Plan - ${{ github.event.inputs.target_env }}"
-    runs-on: [self-hosted, Windows]
+    runs-on: [windows-latest]
     environment: ${{ github.event.inputs.target_env }}
     
     steps:
@@ -63,7 +63,7 @@ jobs:
   manual_approval:
     name: "Wait for Approval"
     needs: terraform_plan
-    runs-on: ubuntu-latest
+    runs-on: [windows-latest]
     environment: ${{ github.event.inputs.target_env }} 
     steps:
       - run: echo "Waiting for approval..."
@@ -71,7 +71,7 @@ jobs:
   terraform_apply:
     name: "Apply - ${{ github.event.inputs.target_env }}"
     needs: manual_approval
-    runs-on: [self-hosted, Windows]
+    runs-on: [windows-latest]
     environment: ${{ github.event.inputs.target_env }}
     
     steps:
