--- a/.github/workflows/keyvault.yml
+++ b/.github/workflows/keyvault.yml
@@ -38,7 +38,7 @@ jobs:
         uses: azure/get-keyvault-secrets@v1
         with:
           keyvault: "${{ vars.KEYVAULT_NAME }}"
-          secrets: 'ARM-SUBSCRIPTION-ID, ARM-TENANT-ID' 
+          secrets: ${{ github.event.inputs.target_env }}-SUBSCRIPTION-ID, ${{ github.event.inputs.target_env }}-TENANT-ID'
         id: kvsecrets
 
       - name: Terraform Init & Plan
@@ -94,8 +94,8 @@ jobs:
       - name: Get Secrets for Apply
         uses: azure/get-keyvault-secrets@v1
         with:
-          keyvault: "your-keyvault-name"
-          secrets: 'ARM-SUBSCRIPTION-ID, ARM-TENANT-ID'
+          keyvault: "${{ vars.KEYVAULT_NAME }}"
+          secrets: ${{ github.event.inputs.target_env }}-SUBSCRIPTION-ID, ${{ github.event.inputs.target_env }}-TENANT-ID'
         id: kvsecrets
 
       - name: Terraform Apply
