--- a/.github/workflows/finaloidc.yml
+++ b/.github/workflows/finaloidc.yml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tf-plan-${{ github.event.inputs.target_env }}
-          path: ${{ github.workspace }}\tfplan
+          path: ${{ github.event.inputs.working_directory }}\tfplan
 
   manual_approval:
     name: "Wait for Approval"
