--- a/.github/workflows/finaloidc.yml
+++ b/.github/workflows/finaloidc.yml
@@ -45,6 +45,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.7.0"
+          terraform_wrapper: false
 
       - name: Terraform Init & Plan
         shell: pwsh
@@ -107,6 +108,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.7.0"
+          terraform_wrapper: false
 
       - name: Terraform Apply
         shell: pwsh
