--- a/.github/workflows/finaloidc.yml
+++ b/.github/workflows/finaloidc.yml
@@ -20,7 +20,7 @@ permissions:
 jobs:
   terraform_plan:
     name: "Plan - ${{ github.event.inputs.target_env }}"
-    runs-on: windows-latest
+    runs-on: [self-hosted, Window]
     environment: ${{ github.event.inputs.target_env }}
     
     steps:
@@ -69,7 +69,7 @@ jobs:
   manual_approval:
     name: "Wait for Approval"
     needs: terraform_plan
-    runs-on: windows-latest
+    runs-on: [self-hosted, Window]
     environment: ${{ github.event.inputs.target_env }} 
     steps:
       - run: echo "Waiting for approval for ${{ github.event.inputs.target_env }}..."
@@ -77,7 +77,7 @@ jobs:
   terraform_apply:
     name: "Apply - ${{ github.event.inputs.target_env }}"
     needs: manual_approval
-    runs-on: windows-latest
+    runs-on: [self-hosted, Window]
     environment: ${{ github.event.inputs.target_env }}
     
     steps:
