--- a/.github/workflows/finaloidc.yml
+++ b/.github/workflows/finaloidc.yml
@@ -20,7 +20,7 @@ permissions:
 jobs:
   terraform_plan:
     name: "Plan - ${{ github.event.inputs.target_env }}"
-    runs-on: [self-hosted, Window]
+    runs-on: [self-hosted, windows]
     environment: ${{ github.event.inputs.target_env }}
     
     steps:
@@ -41,11 +41,10 @@ jobs:
           secrets: '${{ github.event.inputs.target_env }}-SUBSCRIPTION-ID, ${{ github.event.inputs.target_env }}-TENANT-ID'
         id: kvsecrets
         
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.7.0"
-          terraform_wrapper: false
+     # - name: Setup Terraform
+     #   uses: hashicorp/setup-terraform@v3
+     #     terraform_version: "1.7.0"
+      #    terraform_wrapper: false
 
       - name: Terraform Init & Plan
         shell: pwsh
@@ -69,7 +68,7 @@ jobs:
   manual_approval:
     name: "Wait for Approval"
     needs: terraform_plan
-    runs-on: [self-hosted, Window]
+    runs-on: [self-hosted, windows]
     environment: ${{ github.event.inputs.target_env }} 
     steps:
       - run: echo "Waiting for approval for ${{ github.event.inputs.target_env }}..."
@@ -77,7 +76,7 @@ jobs:
   terraform_apply:
     name: "Apply - ${{ github.event.inputs.target_env }}"
     needs: manual_approval
-    runs-on: [self-hosted, Window]
+    runs-on: [self-hosted, windows]
     environment: ${{ github.event.inputs.target_env }}
     
     steps:
@@ -104,11 +103,11 @@ jobs:
           secrets: '${{ github.event.inputs.target_env }}-SUBSCRIPTION-ID, ${{ github.event.inputs.target_env }}-TENANT-ID'
         id: kvsecrets
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.7.0"
-          terraform_wrapper: false
+     # - name: Setup Terraform
+     #   uses: hashicorp/setup-terraform@v3
+     #   with:
+     #     terraform_version: "1.7.0"
+     #     terraform_wrapper: false
 
       - name: Terraform Apply
         shell: pwsh
